Fixed small layout issue and set default label of password (#2286)

--- a/src/user/user-credentials.css
+++ b/src/user/user-credentials.css
@@ -76,3 +76,7 @@
 tr.kc-table-header th {
   padding-top: 0px !important;
 }
+
+td.one-row button svg {
+  color: var(--pf-c-button--disabled--Color);
+}
